unreleased

* Enhancements

  * Tiny bit better #explain(needle)
  * Remove paranoid mutexes

1.3.4 / 2012-04-26

* Enhancements

  * Add thread safety with some fine-grained locks (mutexes)

1.3.3 / 2012-04-13

* Enhancements

  * Now you must require 'fuzzy_match/cached_result' if you want to use it.
  * Use active_record_inline_schema to create the FuzzyMatch::CachedResult table
  * Test against CohortAnalysis, the replacement for CohortScope
  * Fix some other random deprecations (like set_primary_key)

1.3.2 / 2012-02-24

* Enhancements

  * Start keeping a changelog!
  * renamed blockings to groupings
  * cleaned up tests

* Bug fixes

  * better handling for one-letter similiarities like 'X foo' vs 'X bar' which couldn't be detected by pair distance
  * take deprecated option :tighteners as :normalizers