@@ -1,18 +1,3 @@
 source :rubygems
 
 gemspec
-
-# bin dependencies
-gem 'remote_table'
-gem 'thor'
-
-# development dependencies
-gem 'minitest-reporters'
-gem "minitest"
-gem 'activerecord', '>=3'
-gem 'mysql2'
-gem 'cohort_analysis'
-gem 'weighted_average'
-gem 'rake'
-gem 'yard'
-gem 'amatch'
