@@ -17,7 +17,20 @@ Gem::Specification.new do |s|
   s.executables   = `git ls-files -- bin/*`.split("\n").map{ |f| File.basename(f) }
   s.require_paths = ["lib"]
 
-  s.add_runtime_dependency 'activesupport', '>=3'
   s.add_runtime_dependency 'to_regexp', '>=0.0.3'
-  s.add_runtime_dependency 'active_record_inline_schema', '>=0.4.0'
+  
+  # needed if you use FuzzyMatch::CachedResult
+  s.add_development_dependency 'active_record_inline_schema', '>=0.4.0'
+
+  # development dependencies
+  s.add_development_dependency "minitest"
+  s.add_development_dependency 'activerecord', '>=3'
+  s.add_development_dependency 'mysql2'
+  s.add_development_dependency 'cohort_analysis'
+  s.add_development_dependency 'weighted_average'
+  s.add_development_dependency 'yard'
+  s.add_development_dependency 'amatch'
+  if RUBY_VERSION >= '1.9'
+    s.add_development_dependency 'minitest-reporters'
+  end
 end
