@@ -3,9 +3,10 @@ require 'bundler'
 Bundler.setup
 require 'minitest/spec'
 require 'minitest/autorun'
-require 'minitest/reporters'
-MiniTest::Reporters.use! MiniTest::Reporters::SpecReporter.new
 
-$LOAD_PATH.unshift(File.dirname(__FILE__))
-$LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '..', 'lib'))
+if RUBY_VERSION >= '1.9'
+  require 'minitest/reporters'
+  MiniTest::Reporters.use! MiniTest::Reporters::SpecReporter.new
+end
+
 require 'fuzzy_match'
